--- a/style.css
+++ b/style.css
@@ -1,49 +1,63 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  background-color: black;
+}
+
+.main {
+  margin-top: 100px;
+}
+
+.battery-top {
+  width: 30px;
+  height: 10px;
+  background-color: black;
+  margin: 0 auto;
+  border: 3px solid silver;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+
+.battery-container {
+  width: 150px;
+  height: 250px;
+  background: black;
+  position: relative;
+  margin: 0 auto;
+  border: 3px solid silver;
+  border-radius: 18px;
+}
+
+.charge {
+  width: 100%;
+  position: absolute;
+  bottom: 0%;
+  border-radius: 14px;
+  animation: battery 8s linear infinite;
+}
+
+@keyframes battery {
+  0% {
+    height: 0%;
+    background: red;
+    
   }
-  
-  body {
-    font-family: "Open Sans", sans-serif;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  25% {
+    height: 25%;
+    background: orange;
+
   }
-  
-  .container {
-    position: relative;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.3s;
+  50% {
+    height: 50%;
+    background: yellow;
+
   }
-  .container.black {
-    background-color: black;
+  75% {
+    height: 75%;
+    background: #d7fc03;
+
   }
-  .container.white {
-    background-color: white;
+  100% {
+    height: 100%;
+    background: rgb(0, 255, 0);
+
   }
-  
-  .icon {
-    border-radius: 30px;
-    transition: 0.3s;
-    cursor: pointer;
-    width: 200px;
-    height: 200px;
-  }
-  .container.black .icon {
-    border: white solid 2px;
-  }
-  .container.white .icon {
-    border: black solid 2px;
-  }
-  
-  #svg-animation {
-    width: 200px;
-  }
+}
